# GLFWPipe

./: GLFWPipe.cabal
src/: InputAssembler.hs  OutputMerger.hs  Resources.hs  Textures.hs
src/Graphics/: GLFWPipe.hs
src/Graphics/GLFWPipe/: Format.hs  FrameBuffer.hs  Stream.hs  Texture.hs
src/Graphics/GLFWPipe/Stream/: Fragment.hs  Primitive.hs
